src/test/ui/parser/issues/issue-58856-1.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-58856-1.rs:6:1
   |
LL | }
   | ^ unexpected closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-58856-1.rs:8:14
   |
LL | impl A {
   |        - unclosed delimiter
LL |
LL |     fn b(self>
   |         - unclosed delimiter
...
LL | fn main() {}
   |              ^

error: this file contains an unclosed delimiter
  --> $DIR/issue-58856-1.rs:8:14
   |
LL | impl A {
   |        - unclosed delimiter
LL |
LL |     fn b(self>
   |         - unclosed delimiter
...
LL | fn main() {}
   |              ^

error: expected parameter name, found `>`
  --> $DIR/issue-58856-1.rs:3:14
   |
LL |     fn b(self>
   |              ^ expected parameter name

error: expected one of `)`, `,`, or `:`, found `>`
  --> $DIR/issue-58856-1.rs:3:14
   |
LL |     fn b(self>
   |              ^
   |              |
   |              expected one of `)`, `,`, or `:`
   |              help: missing `,`

error: expected one of `->`, `where`, or `{`, found `}`
  --> $DIR/issue-58856-1.rs:8:14
   |
LL |     fn b(self>
   |        - while parsing this `fn`
...
LL | fn main() {}
   |              ^ expected one of `->`, `where`, or `{`

error: associated function in `impl` without body
  --> $DIR/issue-58856-1.rs:3:5
   |
LL | /     fn b(self>
LL | |
LL | |
LL | | }
LL | |
LL | | fn main() {}
   | |             ^- help: provide a definition for the function: `{ <body> }`
   | |_____________|
   | 

error[E0412]: cannot find type `A` in this scope
  --> $DIR/issue-58856-1.rs:1:6
   |
LL | impl A {
   |      ^ not found in this scope

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0412`.
